Attempting a page-break fix on mobile
Images within page-breaks appear extremely zoomed in on mobile devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,8 +67,8 @@ html {
 }
 
 .page-break img {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     object-fit: cover;
 }
 
